feat(course-service): search/pagination + internal reserve/release seat API