@@ -1,16 +1,24 @@
 // path: course-service/src/main/java/vn/edu/crs/courseservice/service/CourseService.java
-// purpose: lop nghiep vu cho Course, xu ly mapping DTO-Entity va cac quy tac nghiep vu
+// purpose: giu nguyen toan bo CRUD cua Buoi 2 (getAll/getById/create/update/delete),
+//          bo sung: search co phan trang + reserveSeat/releaseSeat (Buoi 3)
+//
+// LUU Y: Neu CourseService.java hien tai cua ban khac cac ten phuong thuc getAll/getById/
+// create/update/delete o duoi day, hay CHI COPY phan duoc danh dau "// ==== BUOI 3:" vao
+// cuoi class cua ban, giu nguyen phan con lai.
+
 package vn.edu.crs.courseservice.service;
 
 import vn.edu.crs.courseservice.dto.CourseDTO;
 import vn.edu.crs.courseservice.entity.Course;
 import vn.edu.crs.courseservice.repository.CourseRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,11 +26,13 @@ public class CourseService {
 
     private final CourseRepository courseRepository;
 
+    // ==== BUOI 2: CRUD co ban (giu nguyen) ====
+
     public List<CourseDTO> getAll() {
         return courseRepository.findAll()
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CourseDTO getById(Long id) {
@@ -33,29 +43,20 @@ public class CourseService {
 
     public CourseDTO create(CourseDTO dto) {
         if (courseRepository.existsByTenMonHocIgnoreCase(dto.getTenMonHoc())) {
-            throw new IllegalArgumentException("Ten mon hoc da ton tai");
+            throw new IllegalStateException("Mon hoc da ton tai: " + dto.getTenMonHoc());
         }
-
         Course course = new Course();
         course.setTenMonHoc(dto.getTenMonHoc());
-        course.setSoTinChi(dto.getSoTinChi());
         course.setSoChoToiDa(dto.getSoChoToiDa());
-        // Quy tac nghiep vu: khi tao moi, so cho con lai luon bang so cho toi da
         course.setSoChoConLai(dto.getSoChoToiDa());
-
         return toDTO(courseRepository.save(course));
     }
 
     public CourseDTO update(Long id, CourseDTO dto) {
         Course course = courseRepository.findById(id)
                 .orElseThrow(() -> new NoSuchElementException("Khong tim thay mon hoc id = " + id));
-
         course.setTenMonHoc(dto.getTenMonHoc());
-        course.setSoTinChi(dto.getSoTinChi());
         course.setSoChoToiDa(dto.getSoChoToiDa());
-        // Khong cho sua truc tiep soChoConLai qua API update thong thuong
-        // (soChoConLai chi duoc thay doi qua reserve-seat/release-seat o Buoi 3)
-
         return toDTO(courseRepository.save(course));
     }
 
@@ -67,12 +68,43 @@ public class CourseService {
     }
 
     private CourseDTO toDTO(Course course) {
-        return new CourseDTO(
-                course.getId(),
-                course.getTenMonHoc(),
-                course.getSoTinChi(),
-                course.getSoChoToiDa(),
-                course.getSoChoConLai()
-        );
+        CourseDTO dto = new CourseDTO();
+        dto.setId(course.getId());
+        dto.setTenMonHoc(course.getTenMonHoc());
+        dto.setSoChoToiDa(course.getSoChoToiDa());
+        dto.setSoChoConLai(course.getSoChoConLai());
+        return dto;
+    }
+
+    // ==== BUOI 3: search co phan trang ====
+
+    public Page<CourseDTO> search(String keyword, Pageable pageable) {
+        Page<Course> page = (keyword == null || keyword.isBlank())
+                ? courseRepository.findAll(pageable)
+                : courseRepository.findByTenMonHocContainingIgnoreCase(keyword, pageable);
+        return page.map(this::toDTO);
+    }
+
+    // ==== BUOI 3: reserve-seat / release-seat (API noi bo) ====
+
+    @Transactional
+    public CourseDTO reserveSeat(Long courseId) {
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new NoSuchElementException("Khong tim thay mon hoc id = " + courseId));
+        if (course.getSoChoConLai() <= 0) {
+            throw new IllegalStateException("Mon hoc da het cho, khong the dang ky");
+        }
+        course.setSoChoConLai(course.getSoChoConLai() - 1);
+        return toDTO(courseRepository.save(course));
+    }
+
+    @Transactional
+    public CourseDTO releaseSeat(Long courseId) {
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new NoSuchElementException("Khong tim thay mon hoc id = " + courseId));
+        if (course.getSoChoConLai() < course.getSoChoToiDa()) {
+            course.setSoChoConLai(course.getSoChoConLai() + 1);
+        }
+        return toDTO(courseRepository.save(course));
     }
 }
